--- a/Shedule/App.config
+++ b/Shedule/App.config
@@ -1,13 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Shedule.Properties.Settings.ScheduleConnectionString"
-            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Schedule.accdb;Persist Security Info=True"
-            providerName="System.Data.OleDb" />
+        <add name="Shedule.Properties.Settings.ScheduleConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\Schedule.accdb;Persist Security Info=True" providerName="System.Data.OleDb"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
 </configuration>
