--- a/Shedule/Schedule.csproj
+++ b/Shedule/Schedule.csproj
@@ -69,6 +69,12 @@
     <Compile Include="Admin.Designer.cs">
       <DependentUpon>Admin.cs</DependentUpon>
     </Compile>
+    <Compile Include="authorization.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="authorization.Designer.cs">
+      <DependentUpon>authorization.cs</DependentUpon>
+    </Compile>
     <Compile Include="Cabinet.cs" />
     <Compile Include="Main_form.cs">
       <SubType>Form</SubType>
@@ -84,12 +90,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>ScheduleDataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Schedule_form.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Schedule_form.Designer.cs">
-      <DependentUpon>Schedule_form.cs</DependentUpon>
-    </Compile>
     <Compile Include="Teacher.cs" />
     <Compile Include="Teacher_form.cs">
       <SubType>Form</SubType>
@@ -102,6 +102,9 @@
     <Compile Include="Weekday.cs" />
     <EmbeddedResource Include="Admin.resx">
       <DependentUpon>Admin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="authorization.resx">
+      <DependentUpon>authorization.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main_form.resx">
       <DependentUpon>Main_form.cs</DependentUpon>
@@ -116,9 +119,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Schedule_form.resx">
-      <DependentUpon>Schedule_form.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Teacher_form.resx">
       <DependentUpon>Teacher_form.cs</DependentUpon>
     </EmbeddedResource>
@@ -157,6 +157,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\DataSources\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Schedule.accdb">
